--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -16,4 +16,7 @@ jobs:
     steps:
       - uses: clifong/metrics@latest
         with:
+          filename: metrics.classic.svg
           token: ${{ secrets.METRICS_TOKEN }}
+          base: header, repositories
+          plugin_lines: yes
