--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -14,7 +14,7 @@ jobs:
     permissions:
       contents: write
     steps:
-      - uses: clifong/metrics@latest
+      - uses: lowlighter/metrics@latest
         with:
           filename: metrics.classic.svg
           token: ${{ secrets.METRICS_TOKEN }}
